Fix package title overlapping issue in mobile view (#507)
* Fix title overlapping issue

* Package title make smaller and show two lines

--- a/donor-portal/src/pages/donate-now/styles.css
+++ b/donor-portal/src/pages/donate-now/styles.css
@@ -65,7 +65,7 @@
 
 .package-card .card-details__heading__text {
   display: -webkit-box;
-  -webkit-line-clamp: 1;
+  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
@@ -100,6 +100,14 @@
 @media (max-width: 600px) {
   .package-card img {
     display: none;
+  }
+
+  .package-card .card-details__heading__text {
+    font-size: 1.3em;
+  }
+
+  .package-card .card_details__package_progress_text {
+    font-size: 1rem;
   }
 
   .medical-needs-heading {
